--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "forever start --minUptime 1000 --spinSleepTime 1000 ./bin/www"
+    "start": "node ./bin/www"  
+       //"forever start --minUptime 1000 --spinSleepTime 1000 ./bin/www"
   },
   "dependencies": {
     "cookie-parser": "^1.4.4",
@@ -17,5 +18,18 @@
     "passport": "^0.4.0",
     "passport-google-oauth": "^2.0.0",
     "pug": "^2.0.4"
-  }
+  },
+  "main": "app.js",
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/DaEunShim/rstsns2.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/DaEunShim/rstsns2/issues"
+  },
+  "homepage": "https://github.com/DaEunShim/rstsns2#readme",
+  "description": ""
 }
